--- a/reports/index.html
+++ b/reports/index.html
@@ -48,7 +48,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Aug 27, 2020 03:28:14 AM</span>
+                    <span class="badge badge-primary">Aug 27, 2020 12:54:11 PM</span>
                 </a>
             </li>
         </ul>
@@ -124,8 +124,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">feature</p>
-							<p class="duration text-sm">0h 0m 31s+952ms</p>
-							<span class="datetime">03:28:14 AM</span>
+							<p class="duration text-sm">0h 0m 24s+796ms</p>
+							<span class="datetime">12:54:12 PM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -133,9 +133,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-fail">feature</h5>
-									<span class='badge badge-success'>08.27.2020 03:28:14</span>
-									<span class='badge badge-danger'>08.27.2020 03:28:46</span>
-									<span class='badge badge-default'>0h 0m 31s+952ms</span>
+									<span class='badge badge-success'>08.27.2020 12:54:12</span>
+									<span class='badge badge-danger'>08.27.2020 12:54:37</span>
+									<span class='badge badge-default'>0h 0m 24s+796ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -152,9 +152,9 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>3:28:46 AM</td>
+				<td>12:54:37 PM</td>
 				<td>
-						<textarea disabled class="code-block">cucumber.runtime.CucumberException: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS (93ab1acc07f82789a55ed31c1ffad04f)] -> xpath: //a[@class='account']]] but found [Umesh Karkar]
+						<textarea disabled class="code-block">cucumber.runtime.CucumberException: java.lang.AssertionError: expected [Login - My Store] but found [Login]
 	at cucumber.api.testng.TestNGCucumberRunner.runCucumber(TestNGCucumberRunner.java:69)
 	at cucumber.api.testng.AbstractTestNGCucumberTests.feature(AbstractTestNGCucumberTests.java:21)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
@@ -182,20 +182,21 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS (93ab1acc07f82789a55ed31c1ffad04f)] -> xpath: //a[@class='account']]] but found [Umesh Karkar]
+Caused by: java.lang.AssertionError: expected [Login - My Store] but found [Login]
 	at org.testng.Assert.fail(Assert.java:96)
 	at org.testng.Assert.failNotEquals(Assert.java:776)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:137)
 	at org.testng.Assert.assertEquals(Assert.java:118)
-	at org.testng.Assert.assertEquals(Assert.java:442)
-	at stepDefinitions.StepDefinition.validate_correct_name_and_surname_is_displayed_on_landing_lage(StepDefinition.java:73)
-	at ?.Then Validate correct name and surname is displayed on landing lage(login.feature:7)
+	at org.testng.Assert.assertEquals(Assert.java:453)
+	at org.testng.Assert.assertEquals(Assert.java:463)
+	at stepDefinitions.StepDefinition.user_create_an_account_with_address(StepDefinition.java:42)
+	at ?.When User create an account with "adsfsdfsdf392@gmail.com" address(login.feature:5)
 </textarea>
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>3:28:46 AM</td>
+				<td>12:54:37 PM</td>
 				<td>
 						<textarea disabled class="code-block">java.lang.NullPointerException
 	at resources.BaseClass.getScreenShotPath(BaseClass.java:46)
@@ -293,7 +294,7 @@ Caused by: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS
 											<i class="fa fa-times text-white"></i>
 										</div>
 									</td>
-									<td>03:28:14 AM</td>
+									<td>12:54:12 PM</td>
 									<td class='linked' test-id='1'>
 										feature
 									</td>
@@ -328,7 +329,7 @@ Caused by: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS
 											<i class="fa fa-times text-white"></i>
 										</div>
 									</td>
-									<td>03:28:14 AM</td>
+									<td>12:54:12 PM</td>
 									<td class='linked' test-id='1'>
 										feature
 									</td>
@@ -427,7 +428,7 @@ Caused by: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Aug 27, 2020 03:28:14 AM</h4>
+							<h4 class="font-weight-light mt-4">Aug 27, 2020 12:54:11 PM</h4>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -443,7 +444,7 @@ Caused by: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 0m 32s+664ms</h4>
+							<h4 class="font-weight-light mt-4">0h 0m 25s+556ms</h4>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -538,7 +539,7 @@ Caused by: java.lang.AssertionError: expected [[[ChromeDriver: chrome on WINDOWS
 </script>
 <script>
 	var timeline = {
-	        "feature":31.952
+	        "feature":24.796
 	};
 </script>
                 </div>
